# LegalRAG

./: .dockerignore  .gitignore  APPROACH.md  DESIGN.md  Dockerfile  README.md  findings.md  main.py  pyproject.toml  requirements-deploy.txt  requirements.txt
data/contracts/: DPA_Acme_VendorXYZ.md  MSA_Acme_VendorXYZ.md  NDA_Acme_VendorXYZ.md  README.md  SLA_Acme_VendorXYZ.md
docker/: entrypoint.sh
docs/: DEPLOY_RUNPOD.md  DESIGN.md  DESIGN_RATIONALE.md
legal_rag/: app.py  models.py
legal_rag/agents/: orchestrator.py  planner.py  retriever.py  risk.py  synthesizer.py  verifier.py
legal_rag/agents/prompts/: __init__.py  templates.py
legal_rag/cli/: console.py
legal_rag/config/: config.yaml  settings.py
legal_rag/eval/: ablation.py  gold_set.py  qrels.py  retrieval_eval.py  retrieval_metrics.py  runner.py
legal_rag/ingestion/: chunker.py  clause_tags.py  indexer.py  parser.py
legal_rag/llm/: client.py  embeddings.py
legal_rag/memory/: __init__.py  session.py
legal_rag/retrieval/: bm25.py  dense.py  fusion.py  rerank.py  store.py
legal_rag/web/: __init__.py  app.py  service.py
legal_rag/web/static/: index.html
scripts/: commit_m1.sh  commit_m2.sh  commit_m3_m4.sh  commit_m5_m6.sh  run_local.sh
tests/: test_agents.py  test_eval.py  test_ingestion.py  test_retrieval.py  test_retrieval_metrics.py  test_web.py
tests/fixtures/contracts/: data_processing_agreement.txt  nda_acme_vendor.txt  service_level_agreement.txt  vendor_services_agreement.txt
